--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<br>
 	From cooking a simple dishes as pasta with tomato souce, to complex and traditional dishes as Kubba.
 	<br>
-	Cooking makes me feel free and creative, creating a dish from screach to became the tastiest dish.
+	Cooking makes me feel free and creative, creating a dish from screach to became the tastiest meal.
 	<br>
 	With my beloved wife Noa we cook and back a variety of wonderful food.
 	</p>
