--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
 	<font class="menu"> <a href="#home">Home |</a> <a href="#about">About Me |</a> Food Gallery <a href="#links">| Links</a> <br> </font>
 	<hr>		
 	<h1 class="head">My Food Gallery</h1>
-	<img style="height:400" src="images/burger.jpg">
-	<img style="height:400" src="images/bebka.jpg">
-	<img style="height:400" src="images/knafe.jpg">
-	<br>
-	<img style="height:400" src="images/kubba.jpg">
-	<img style="height:400" src="images/shak.jpg">
-	<img style="height:400" src="images/pizza2.jpg">
+	<div style="width:1200">
+		<img style="height:400" src="images/burger.jpg">
+		<img style="height:400" src="images/bebka.jpg">
+		<img style="height:400" src="images/knafe.jpg">
+		<img style="height:400" src="images/kubba.jpg">
+		<img style="height:400" src="images/shak.jpg">
+		<img style="height:400" src="images/pizza2.jpg">
+	</div>
 	<br>
 	<br>
 	<br>
